# QINP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QINP.kdev4  README.md  build.bat  build.sh  build_and_run.sh  callgrind.sh  compile_commands.json  genStdlibRef.py  render_graphviz.sh  test.py
.github/workflows/: codeql.yml
docs/: basic-concepts.md  blueprints.md  builtin-types.md  compiler.md  control-flow.md  declarations.md  expressions.md  home.md  keywords.md  lambdas.md  operators.md  overloading.md
docs/stdlib/: Color.qnp.md  TEMPLATE.md  algorithm.qnp.md  assert.qnp.md  control.qnp.md  error.qnp.md  fileio.qnp.md  iterator.qnp.md  limits.qnp.md  linux-qnp.md  list.qnp.md  map.qnp.md  math-qnp.md  math.qnp.md  memory-qnp.md  memory.qnp.md  order.qnp.md  random.qnp.md  std-qnp.md  std.qnp.md  stdio.qnp.md  stdlib.md  string-qnp.md  string.qnp.md  system-qnp.md  system.qnp.md  time-qnp.md  time.qnp.md
examples/: class_test  class_test.qnp  defer.qnp  exit_code.qnp  fibonacci.qnp  fizzbuzz.qnp  gameoflife.qnp  goal.qnp  hello.qnp  memory_test.qnp  print_test.qnp  shift_test.qnp  strip_test.qnp  syntax.qnp  test  test.qnp
host/: FileReader.qnp  QINP.qnp  Token.qnp  Tokenizer.qnp
scripts/: README.md  build.sh  callgrind.sh  install.sh  uninstall.sh
src/: ArgsParser.cpp  ArgsParser.h  CmdArgParser.cpp  CmdArgParser.h  Datatype.cpp  Datatype.h  ExecCmd.cpp  ExecCmd.h  ExportComments.cpp  ExportComments.h  ExportSymbolInfo.cpp  ExportSymbolInfo.h  FileReader.cpp  HelpPrinter.h  NasmGenerator.cpp  NasmGenerator.h  OperatorPrecedence.cpp  OperatorPrecedence.h  PlatformName.h  Program.cpp  Program.h  ProgramGenerator.cpp  ProgramGenerator.h  QINP.cpp  Statement.cpp  Statement.h  StringHelpers.cpp  Symbols.cpp  Symbols.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  TokenizerTypes.cpp  TokenizerTypes.h  TranslationUnit.cpp  TranslationUnit.h  Warning.h  pathToExecutableDir.cpp  pathToExecutableDir.h  (+1 more)
src/Errors/: NasmGenError.h  ProgGenError.h  QinpError.h  TokenizerError.h
src/NasmGenerators/: NasmGen_Linux_x86_64.cpp  NasmGen_Linux_x86_64.h
src/errors/: ErrorPrinter.cpp  ErrorPrinter.h  QinpError.cpp  QinpError.h  SymbolError.h
src/expressions/: ConstExprObject.cpp  ConstExprObject.h  Expression.cpp  Expression.h  ExpressionBinaryOp.cpp  ExpressionBinaryOp.h  ExpressionFunctionCall.cpp  ExpressionFunctionCall.h  ExpressionIdentifier.cpp  ExpressionIdentifier.h  ExpressionIf.cpp  ExpressionIf.h  ExpressionReturn.cpp  ExpressionReturn.h  (+12 more)
stdlib/: Color.qnp  algorithm.qnp  assert.qnp  control.qnp  error.qnp  fileio.qnp  iterator.qnp  limits.qnp  linux.qnp  list.qnp  map.qnp  math.qnp  memory.qnp  order.qnp  random.qnp  std.qnp  stdio.qnp  string.qnp  system.qnp  time.qnp
tests/: argv.blob  argv.qnp  arithmetics.blob  arithmetics.qnp  boolean-literal.blob  boolean-literal.qnp  builtin-types.blob  builtin-types.qnp  comment.qnp  cond-op-type-mismatch.blob  cond-op-type-mismatch.qnp  cond-op.blob  cond-op.qnp  conv-no-preserve-const.blob  conv-no-preserve-const.qnp  declarations.blob  declarations.qnp  defer-import.blob  defer-import.qnp  defer-main.blob  defer-main.qnp  do-while-loop.blob  do-while-loop.qnp  enum.blob  enum.qnp  exit-code.blob  exit-code.qnp  explicit-conversion.blob  explicit-conversion.qnp  function-explicit-definition-missing-declaration.blob  function-explicit-definition-missing-declaration.qnp  function-explicit-definition.qnp  function-missing-return.blob  function-missing-return.qnp  function-wrong-return.blob  function-wrong-return.qnp  function.blob  function.qnp  identifiers.blob  identifiers.qnp  (+63 more)
(+85 files in other folders)
